--- a/Lab/mod-10/style.css
+++ b/Lab/mod-10/style.css
@@ -2,13 +2,14 @@ body {
     font-family: Arial, sans-serif;
     /* background-color: #068e5c; */
     background-image: url(mod.png);
+    background-size: cover;
 
 
 }
 
 #counter-container {
     margin: 0 auto;
-    max-width: 5000px;
+    max-width: 900px;
     text-align: center;
     padding-top: 100px;
     padding-left: 1300px;
